Fix double scroll on mobile overview

--- a/app/frontend/assets/styles/components/_list-incidents.scss
+++ b/app/frontend/assets/styles/components/_list-incidents.scss
@@ -58,28 +58,24 @@
 
     .container__list {
         display: flex;
-        height: 97vh;
+        height: 100%;
 
         > .container__flex {
             width: 100%;
-            display: flex;
-            flex-direction: column;
-            flex: 1 1 auto;
 
             .list__incidents {
                 flex: 1 1 0;
                 border-top: 1px solid $gray-tint04;
-                overflow-y: hidden;
-                height: 100vh;
-                scroll-behavior: smooth;
             }
         }
         @media (min-width: map-get($grid-breakpoints, lg)) {
             border-top: none;
-            height: 100%;
 
             > .container__flex {
                 max-width: 500px;
+                display: flex;
+                flex-direction: column;
+                flex: 1 1 auto;
                 .list__incidents {
                     overflow-y: scroll;
                     height: auto;
@@ -88,14 +84,6 @@
 
             .container__search {
                 display: none;
-            }
-        }
-    }
-
-    @supports (height: 97dvh) {
-        @media (max-width: map-get($grid-breakpoints, md)) {
-            .container__list {
-                height: 97dvh;
             }
         }
     }
